eventos destacados text

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,7 +1,6 @@
-<h3 class="evento-text">EVENTO DESTACADO</h3>
-<p class="agenda-text">21:00h &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Athletic - Real Suciedad |&nbsp;
-    <a href="acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f">OPCIÓN 1</a> /
-    <a href="acestream://1969c27658d4c8333ab2c0670802546121a774a5">OPCIÓN 2</a> /
-    <a href="acestream://aa82e7d4f03061f2144a2f4be22f2e2210d42280">OPCIÓN 3</a> /
-    <a href="acestream://5a236fbbe6e5bbfec03db548c244a7c858d675c0">OPCIÓN 4</a>
+<h3 class="evento-text">EVENTOS DESTACADOS</h3>
+<p class="agenda-text">Copa Davis (Tenis) &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Canal: Movistar Plus+ | Movistar Deportes 2
 </p>
+<!--><p class="agenda-text">24/11 · 21:00h &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Athletic - Real Sociedad | Canal: Movistar LALIGA TV
+</p>
+<!-->
