--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,6 +1,6 @@
 <h3 class="evento-text">EVENTOS DESTACADOS</h3>
-<p class="agenda-text">Copa Davis (Tenis) &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Canal: Movistar Plus+ | Movistar Deportes 2
+<p class="agenda-text">24/11 · 21:00h &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Athletic - Real Sociedad
+     | Canales:&nbsp;<a href="acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f">Movistar LALIGA TV</a> &nbsp;
+     / &nbsp;<a href="acestream://56ac8e227d526e722624675ccdd91b0cc850582f">Movistar Plus+</a>
 </p>
-<!--><p class="agenda-text">24/11 · 21:00h &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Athletic - Real Sociedad | Canal: Movistar LALIGA TV
-</p>
-<!-->
+
