--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,15 @@
       </div>
     </div>
     <div class="time-clock">
-      <iframe src="https://free.timeanddate.com/clock/i9n4hxch/n327/tles4/fn12/fs18/fcfff/tc000/pcccc/ftb/bls0/brs0/bts4/th1" frameborder="0" width="92" height="25"></iframe>
+      <iframe
+        src="https://free.timeanddate.com/clock/i9n4hxch/n327/tles4/fn12/fs18/fcfff/tc000/pcccc/ftb/bls0/brs0/bts4/th1"
+        frameborder="0"
+        width="92"
+        height="25"
+      ></iframe>
     </div>
   </nav>
-  
+
   <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
   <img
     referrerpolicy="no-referrer-when-downgrade"
@@ -112,11 +117,13 @@
         ><sup><i class="bi bi-box-arrow-in-up-right"></i></sup></span
     ></a>
   </h4>
-  
+
+  <!--> 
   <div class="agenda-text-component">
     <app-agenda-evento-text></app-agenda-evento-text>
   </div>
-  
+  <-->
+
   <h3 class="header-enlaces">ENLACES</h3>
   <div class="search-container">
     <mat-form-field appearance="outline" class="search-field">
