--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,12 +20,22 @@
   </nav>
 
   <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
-  <img
-    referrerpolicy="no-referrer-when-downgrade"
-    src="https://markel-links.matomo.cloud/matomo.php?idsite=1&amp;rec=1"
-    style="border: 0"
-    alt=""
-  />
+  <!--> CONTADOR DE VISITAS <-->
+  <script type="text/javascript">
+    (function (c, l, a, r, i, t, y) {
+      c[a] =
+        c[a] ||
+        function () {
+          (c[a].q = c[a].q || []).push(arguments);
+        };
+      t = l.createElement(r);
+      t.async = 1;
+      t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0];
+      y.parentNode.insertBefore(t, y);
+    })(window, document, "clarity", "script", "p4a6y8bumj");
+  </script>
+  <!--> FIN CONTADOR DE VISITAS <-->
   <div class="futbol-tv-agendas">
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[0]">
