--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -144,7 +144,12 @@
               : (column + 1) * (filteredLinks.length / 2)
         "
       >
-        <a href="{{ link.url }}" class="acestream-link" (click)="trackClick(link.title)">{{ link.title }}</a>
+        <a
+          href="{{ link.url }}"
+          class="acestream-link"
+          (click)="trackClick(link.title)"
+          >{{ link.title }}</a
+        >
         <button class="copy-button" (click)="copyLink(link.url)">
           <mat-icon style="font-size: 20px; display: block"
             >content_copy</mat-icon
@@ -182,7 +187,6 @@
   <div class="footer">
     <a
       matTooltip="GitHub"
-      matTooltipPosition="above"
       href="https://github.com/MarkelRoman05"
       class="github-button"
       target="_blank"
