--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -135,13 +135,6 @@
   justify-content: center;
 }
 
-.how-to-play-header {
-  display: flex;
-  justify-content: center;
-  margin-top: 8px;
-  margin-bottom: 5px;
-}
-
 .footer {
   flex-shrink: 0;
   background-color: #004d40; /* Fondo de color azul oscuro verdoso */
@@ -157,7 +150,18 @@
   font-size: 13px; /* Tamaño de fuente */
 }
 
-.how-to-play-text {
+.how-to-play-header {
+  display: flex;
+  justify-content: center;
+  font-size: 24px;
+  margin-top: 8px;
+  margin-bottom: 5px;
+}
+
+.how-to-play-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   background-color: #f9f9f9; /* Color de fondo claro */
   border: 1px solid #ddd; /* Borde gris claro */
   border-radius: 5px; /* Bordes redondeados */
@@ -166,7 +170,16 @@
   font-size: 17px; /* Tamaño de fuente */
   line-height: 1.6; /* Altura de línea */
   color: #333; /* Color de texto */
-  margin: 0 30px 30px 35px; /* Márgenes a los lados y abajo */
+  margin: 0 30px 30px 35px; 
+  margin-top: 19px;
+}
+
+.how-to-play-text {
+  font-family: Arial, sans-serif; /* Fuente */
+  font-size: 17px; /* Tamaño de fuente */
+  line-height: 1.6; /* Altura de línea */
+  color: #333; /* Color de texto */
+  margin: 0 20px 20px 29px; /* Márgenes a los lados y abajo */
 }
 
 .how-to-play-text a {
@@ -207,6 +220,9 @@
   justify-content: center;
   margin-top: 5px;
   margin-bottom: 9px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
 }
 
 .agenda-header {
@@ -214,6 +230,9 @@
   justify-content: center;
   margin-top: 5px;
   margin-bottom: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
 }
 
 .links-container {
@@ -267,6 +286,7 @@
 @media (max-width: 1979px) {
   .futbol-tv-agendas {
     overflow-x: scroll;
+    overflow-y: hidden;
   }
 }
 
