--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+.container {
+  background-color: #121212; 
+}
+
 .links {
   display: flex;
   flex-wrap: wrap;
@@ -99,7 +103,7 @@
 }
 
 .link-futboltv {
-  color: #0000ff;
+  color: #007bff;
   font-weight: bold;
 }
 
@@ -133,6 +137,7 @@
 .text-enlaces-agenda-completa {
   display: flex;
   justify-content: center;
+  color: white;
 }
 
 .footer {
@@ -156,15 +161,15 @@
   font-size: 24px;
   margin-top: 8px;
   margin-bottom: 5px;
+  color: white;
 }
 
 .how-to-play-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-color: #f9f9f9; /* Color de fondo claro */
   border: 1px solid #ddd; /* Borde gris claro */
-  border-radius: 5px; /* Bordes redondeados */
+  border-radius: 10px; /* Bordes redondeados */
   padding: 15px; /* Espaciado interno */
   font-family: Arial, sans-serif; /* Fuente */
   font-size: 17px; /* Tamaño de fuente */
@@ -178,7 +183,7 @@
   font-family: Arial, sans-serif; /* Fuente */
   font-size: 17px; /* Tamaño de fuente */
   line-height: 1.6; /* Altura de línea */
-  color: #333; /* Color de texto */
+  color: white; /* Color de texto */
   margin: 0 20px 20px 29px; /* Márgenes a los lados y abajo */
 }
 
@@ -193,13 +198,14 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
-  font-size: 16px;
+  font-size: 19px;
   cursor: pointer;
   text-decoration: none;
+  color: rgb(2, 2, 197);
 }
 
 .acestream-link:hover {
-  transform: scale(1.05);
+  transform: scale(1.03);
   transition: transform 0.2s;
   background-color: #f0f0f0;
 }
@@ -222,7 +228,7 @@
   margin-bottom: 9px;
   font-size: 24px;
   font-weight: bold;
-  color: #333;
+  color: white;
 }
 
 .agenda-header {
@@ -232,7 +238,7 @@
   margin-bottom: 5px;
   font-size: 24px;
   font-weight: bold;
-  color: #333;
+  color: white;
 }
 
 .links-container {
