--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -90,12 +90,11 @@
   padding: 0px 2px;
   font-size: 12px;
   border: 1px solid #ccc;
+  border-radius: 6px;
 }
 
 .copy-button:hover {
-  background-color: #e0e0e0;
-  border-color: #bbb;
-  color: #333;
+  background-color: rgba(212, 208, 208, 0.9);
   transition: all 0.3s;
 }
 
