--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -178,10 +178,10 @@
       primera es copiar el enlace, abrir Ace Player manualmente y pegar el
       enlace en la opción "Medio" <i class="bi bi-arrow-right"></i> "Open Ace
       Stream Content ID". La segunda es haciendo clic directamente en el enlace,
-      lo que abrirá automáticamente Ace Player y reproducirá el contenido. Para
-      reproducir estos enlaces, asegúrate de tener abierto Ace Stream Engine
-      (ace_engine / Ace Stream HD), si no, ábrelo tú manualmente desde la ruta
-      de instalación de Ace Stream. Para reproducir los enlaces correctamente,
+      seleccionar Ace Player y esperar al anuncio para ver el contenido. Para reproducir
+      estos enlaces, asegúrate de tener abierto Ace Stream Engine (ace_engine / Ace Stream HD), 
+      si no, ábrelo tú manualmente desde la ruta de instalación de Ace Stream. <br />
+      Para reproducir los enlaces correctamente,
       es recomendable cambiar ciertos parámetros en la configuración de Ace
       Stream y de Ace Player. Primero, haz clic derecho sobre el icono de Ace
       Stream en la barra de tareas y selecciona "Options...". Allí, cambia los
@@ -193,14 +193,6 @@
     </p>
   </div>
   <div class="footer">
-    <a
-      matTooltip="GitHub"
-      matTooltipPosition="above"
-      href="https://github.com/MarkelRoman05"
-      class="github-button"
-      target="_blank"
-      ><i class="bi bi-github github-logo"></i
-    ></a>
     <span class="footer-text">Ace Stream Links</span>
     <p class="footer-text">
       Todos los enlaces son obtenidos de fuentes externas.
