--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -100,13 +100,12 @@
 
 .link-futboltv:hover {
   color: #ff0000;
-  font-weight: bold;
-  text-decoration: underline;
 }
 
 .link-futboltv {
   color: #007bff;
   font-weight: bold;
+  text-decoration: none;
 }
 
 .github-logo {
@@ -201,21 +200,20 @@
   padding: 6px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f9f9f9;
+  background-color: #252525;
   font-size: 19px;
   cursor: pointer;
   text-decoration: none;
-  color: rgb(2, 2, 197);
+  color: rgb(255, 255, 255);
 }
 
 .acestream-link:hover {
   transform: scale(1.03);
   transition: transform 0.2s;
-  background-color: #f0f0f0;
 }
 
 .how-to-play-text a:hover {
-  text-decoration: underline; /* Subrayado al pasar el ratón */
+  text-decoration: underline;
 }
 
 .futbol-tv-agendas {
