update iframe color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,7 +92,7 @@
       <iframe
         id="ftv_iframe"
         name="ftv_iframe"
-        src="https://widgets.futbolenlatv.com/partidos/competition/premier-league?color=005df8&culture=es-ES"
+        src="https://widgets.futbolenlatv.com/partidos/competition/premier-league?color=007eff&culture=es-ES"
         width="400"
         height="401"
         frameborder="0"
