--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -198,4 +198,7 @@
       Todos los enlaces son obtenidos de fuentes externas.
     </p>
   </div>
+  <button matTooltip="Volver arriba" matTooltipPosition="left" class="scroll-to-top" (click)="scrollToTop()">
+    <i class="bi bi-arrow-up arrow-top"></i>
+  </button>
 </div>
