--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -117,6 +117,8 @@
   </div>
   <-->
 
+  <button class="send-email" (click)="sendEmail()">Enviar email</button>
+
   <h3 class="header-enlaces">ENLACES</h3>
   <div class="search-container">
     <form class="search-form">
