--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -167,9 +167,9 @@
 
 .footer {
   flex-shrink: 0;
-  background-color: #004d40; /* Fondo de color azul oscuro verdoso */
+  background-color: #004d40;
   display: flex;
-  flex-direction: column; /* Cambia la dirección del flex a columna */
+  flex-direction: column;
   align-items: center; 
   margin-top: 5px;
   margin-bottom: 5px;
@@ -177,8 +177,8 @@
 }
 
 .footer-text {
-  color: white; /* Color de texto blanco */
-  font-size: 13px; /* Tamaño de fuente */
+  color: white;
+  font-size: 13px;
   margin-top: 8px;
 }
 
@@ -195,28 +195,28 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  border: 1px solid #ddd; /* Borde gris claro */
-  border-radius: 10px; /* Bordes redondeados */
-  padding: 15px; /* Espaciado interno */
-  font-family: Arial, sans-serif; /* Fuente */
-  font-size: 17px; /* Tamaño de fuente */
-  line-height: 1.6; /* Altura de línea */
-  color: #333; /* Color de texto */
+  border: 1px solid #ddd;
+  border-radius: 10px; 
+  padding: 15px;
+  font-family: Arial, sans-serif;
+  font-size: 17px; 
+  line-height: 1.6;
+  color: #333;
   margin: 0 30px 30px 35px; 
   margin-top: 19px;
 }
 
 .how-to-play-text {
-  font-family: Arial, sans-serif; /* Fuente */
-  font-size: 17px; /* Tamaño de fuente */
-  line-height: 1.6; /* Altura de línea */
-  color: white; /* Color de texto */
-  margin: 0 20px 20px 29px; /* Márgenes a los lados y abajo */
+  font-family: Arial, sans-serif;
+  font-size: 17px;
+  line-height: 1.6;
+  color: white;
+  margin: 0 20px 20px 29px;
 }
 
 .how-to-play-text a {
-  color: #007bff; /* Color del enlace */
-  text-decoration: none; /* Sin subrayado */
+  color: #007bff;
+  text-decoration: none;
 }
 
 .acestream-link {
