update text how to play

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -202,9 +202,8 @@
       Para reproducir los enlaces en tu dispositivo móvil, una vez instalado Ace
       Stream, puedes abrir el enlace haciendo clic en él directamente, lo que
       abrirá Ace Stream y reproducirá el contenido. También puedes copiar el
-      enlace, abrir Ace Stream manualmente y pegar el enlace en la opción
-      "Medio"
-      <i class="bi bi-arrow-right"></i> "Abrir contenido Ace Stream ID".
+      enlace, abrir Ace Stream manualmente y pegar el enlace en el cuadro de texto 
+      "Enter content link".
     </p>
 
     <h3 style="color: white; margin: 0 20px 20px 29px">Windows</h3>
