mini change on iframes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -328,4 +328,9 @@
   .text-enlaces-agenda-completa {
     flex-wrap: wrap;
   }
+
+  .iframe-container {
+    width: auto;
+    height: auto;
+  }
 }
