--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -203,7 +203,7 @@
   line-height: 1.6;
   color: #333;
   margin: 0 30px 30px 35px; 
-  margin-top: 19px;
+  margin-top: 3rem;
 }
 
 .how-to-play-text {
