--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,5 +1,10 @@
-<h3 class="evento-text">EVENTOS DESTACADOS</h3>
-<p class="agenda-text">24/11 · 21:00h &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Athletic - Real Sociedad
-     | Canales: Movistar LALIGA TV // Movistar Plus+
+<h3 class="evento-text">SUPERCOPA DE ESPAÑA</h3>
+<p class="agenda-text">08/01 · 20:00h &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Athletic - FC Palancas
+     | Canales: &nbsp;<a href="acestream://56ac8e227d526e722624675ccdd91b0cc850582f">Movistar Plus+</a> &nbsp;// LALIGA TV Bar > &nbsp;
+     <a href="acestream://94d34491106e00394835c8cb68aa94481339b53f">LINK 1</a>&nbsp;<a href="acestream://608b0faf7d3d25f6fe5dba13d5e4b4142949990e">LINK 2</a>
 </p>
 
+<p class="agenda-text">09/01 · 20:00h &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Real Madrid - Mallorca
+     | Canales: &nbsp;<a href="acestream://56ac8e227d526e722624675ccdd91b0cc850582f">Movistar Plus+</a> &nbsp;// LALIGA TV Bar > &nbsp;
+     <a href="acestream://94d34491106e00394835c8cb68aa94481339b53f">LINK 1</a>&nbsp;<a href="acestream://608b0faf7d3d25f6fe5dba13d5e4b4142949990e">LINK 2</a>
+</p>
