update supercopa text

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -4,7 +4,7 @@
      <a href="acestream://94d34491106e00394835c8cb68aa94481339b53f">LINK 1</a>&nbsp;<a href="acestream://608b0faf7d3d25f6fe5dba13d5e4b4142949990e">LINK 2</a>
 </p>
 
-<p class="agenda-text">09/01 · 20:00h &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Real Madrid - Mallorca
+<p class="agenda-text">09/01 · 20:00h &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Florentino CF - Mallorca
      | Canales: &nbsp;<a href="acestream://56ac8e227d526e722624675ccdd91b0cc850582f">Movistar Plus+</a> &nbsp;// LALIGA TV Bar > &nbsp;
      <a href="acestream://94d34491106e00394835c8cb68aa94481339b53f">LINK 1</a>&nbsp;<a href="acestream://608b0faf7d3d25f6fe5dba13d5e4b4142949990e">LINK 2</a>
 </p>
