--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -3,3 +3,5 @@
      | Canales:&nbsp; <a href="acestream://f6beccbc4eea4bc0cda43b3e8ac14790a98b61b4">M+ Supercopa</a>&nbsp;//&nbsp;<a href="acestream://56ac8e227d526e722624675ccdd91b0cc850582f">Movistar Plus+</a> &nbsp;// LALIGA TV Bar > &nbsp;
      <a href="acestream://94d34491106e00394835c8cb68aa94481339b53f">LINK 1</a>&nbsp;<a href="acestream://608b0faf7d3d25f6fe5dba13d5e4b4142949990e">LINK 2</a>
 </p>
+
+<p class="agenda-text">UN SALUDO MUY ESPECIAL A LOS ALUMNOS DE CIBERSEGURIDAD DE TARTANGA</p>
