--- a/src/app/agenda-evento-text/agenda-evento-text.component.css
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.css
@@ -2,14 +2,22 @@
     display: flex;
     justify-content: center;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     border-radius: 5px;
-    background-color: #f9f9f9;
-    color: #333;
+    color: white;
     font-size: 24px;
     line-height: 1.5;
-    text-align: justify;
+    text-align: center;
     flex-wrap: wrap;
+}
+
+.agenda-text a {
+    color: #2087f5;
+    text-decoration: none;
+}
+
+.agenda-text a:hover {
+    color: #ff0000;
 }
 
 .evento-text {
