added ao open text event

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,5 +1,4 @@
-<h3 class="evento-text">SUPERCOPA DE ESPAÑA</h3>
-<p class="agenda-text">12/01 - 20:00h | FINAL &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; Florentino CF - FC Palancas
-     | Canales:&nbsp; <a href="acestream://f6beccbc4eea4bc0cda43b3e8ac14790a98b61b4">M+ Supercopa</a>&nbsp;//&nbsp;<a href="acestream://56ac8e227d526e722624675ccdd91b0cc850582f">Movistar Plus+</a> &nbsp;// LALIGA TV Bar > &nbsp;
-     <a href="acestream://94d34491106e00394835c8cb68aa94481339b53f">LINK 1</a>&nbsp;/&nbsp;<a href="acestream://608b0faf7d3d25f6fe5dba13d5e4b4142949990e">LINK 2</a>
+<h3 class="evento-text">AUSTRALIAN OPEN · TENIS</h3>
+<p class="agenda-text">20/01 -&nbsp;<b>10:10h</b>&nbsp;| 1/4 de Final &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; <b>C. ALCARAZ</b>&nbsp;- N. Djokovic
+     |&nbsp;<a href="acestream://5e4cd48c79f991fcbee2de8b9d30c4b16de3b952">OPCIÓN 1</a>&nbsp;//&nbsp;<a href="acestream://f233f3a8e9ddfae2e43d919789073fc17d9bbd7c">OPCIÓN 2</a>
 </p>
