change diameter of spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
   <div class="futbol-tv-agendas">
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[0]">
-        <mat-spinner></mat-spinner>
+        <mat-spinner diameter="78"></mat-spinner>
       </div>
       <iframe
         id="ftv_iframe_0"
@@ -38,7 +38,7 @@
     </div>
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[1]">
-        <mat-spinner></mat-spinner>
+        <mat-spinner diameter="78"></mat-spinner>
       </div>
       <iframe
         id="ftv_iframe_1"
@@ -54,7 +54,7 @@
     </div>
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[2]">
-        <mat-spinner></mat-spinner>
+        <mat-spinner diameter="78"></mat-spinner>
       </div>
       <iframe
         id="ftv_iframe_2"
@@ -70,7 +70,7 @@
     </div>
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[3]">
-        <mat-spinner></mat-spinner>
+        <mat-spinner diameter="78"></mat-spinner>
       </div>
       <iframe
         id="ftv_iframe_3"
@@ -86,7 +86,7 @@
     </div>
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[4]">
-        <mat-spinner></mat-spinner>
+        <mat-spinner diameter="78"></mat-spinner>
       </div>
       <iframe
         id="ftv_iframe"
