--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
       </div>
     </div>
     <div class="time-clock">
+      <i class="bi bi-clock"></i>
       <iframe
         src="https://free.timeanddate.com/clock/i9n4hxch/n327/tles4/fn12/fs18/fcfff/tc000/pcccc/ftb/bls0/brs0/bts4/th1"
         frameborder="0"
