add agenda text for Champions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,9 +112,9 @@
     ></a>
   </h4>
 
-  <!-- <div class="agenda-text-component">
+  <div class="agenda-text-component">
     <app-agenda-evento-text></app-agenda-evento-text>
-  </div> -->
+  </div>
 
   <h3 class="header-enlaces">ENLACES</h3>
 
