--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,4 +1,4 @@
-<h3 class="evento-text">AUSTRALIAN OPEN · TENIS</h3>
-<p class="agenda-text">20/01 -&nbsp;<b>10:10h</b>&nbsp;| 1/4 de Final &nbsp; <i class="bi bi-arrow-right"></i> &nbsp; <b>C. ALCARAZ</b>&nbsp;- N. Djokovic
-     |&nbsp;<a href="acestream://16ffa1713f42aa27317ee039a2bd0cdbc89a1580">OPCIÓN 1</a>&nbsp;//&nbsp;<a href="acestream://f233f3a8e9ddfae2e43d919789073fc17d9bbd7c">OPCIÓN 2</a>
+<h3 class="evento-text">CHAMPIONS LEAGUE</h3>
+<p class="agenda-text">29/01 - &nbsp;<b>21:00h</b>&nbsp; | Última jornada de la fase de liga | Multichampions: &nbsp;<b>M+ L. Campeones 5</b> &nbsp;|
+Consulta dónde ver los partidos en la sección "Agenda deportiva".
 </p>
