edit for europa league

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,4 +1,4 @@
-<h3 class="evento-text">CHAMPIONS LEAGUE</h3>
-<p class="agenda-text">29/01 - &nbsp;<b>21:00h</b>&nbsp; | Última jornada de la fase de liga | Multichampions: &nbsp;<b>M+ L. Campeones 5</b> &nbsp;|
+<h3 class="evento-text">EUROPA LEAGUE</h3>
+<p class="agenda-text">30/01 - &nbsp;<b>21:00h</b>&nbsp; | Última jornada de la fase de liga | Multieuropa: &nbsp;<b>M+ L. Campeones 3</b> &nbsp;|
 Consulta dónde ver los partidos en la sección "Agenda deportiva".
 </p>
