add logo photo to all links

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -51,6 +51,12 @@
   margin-top: 5px;
 }
 
+.logo-img {
+  width: auto;
+  height: 22px;
+  vertical-align: middle;
+}
+
 .navbar {
   background-color: #333;
   color: white;
