--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -223,6 +223,7 @@
   font-size: 17px; 
   line-height: 1.6;
   color: #333;
+  background: linear-gradient(to top, #000000, #222020);
   margin: 0 30px 30px 35px; 
   margin-top: 3rem;
 }
@@ -251,7 +252,7 @@
   padding: 6px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #252525;
+  background-color: #353333;
   font-size: 19px;
   cursor: pointer;
   text-decoration: none;
