New channels added and some changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,6 +118,13 @@
 
   <h3 class="header-enlaces">ENLACES</h3>
 
+  <div class="canales-actualizados">
+    <span class="canales-text"
+      >Nuevos canales añadidos: UFC y UFC Fight Pass. También actualizados los
+      enlaces caídos.</span
+    >
+  </div>
+
   <div class="search-container">
     <form class="search-form">
       <input
