--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -180,6 +180,14 @@
   </div>
   }
 
+  <div class="otra-web">
+    <h2 style="color: white;">OTRA WEB DE ENLACES</h2>
+    <p>
+      En el caso de que el enlace que busques no funcione, puedes probar en esta web:
+      <a href="https://www.socialcreator.com/xupimarc2/?s=289267&integ_ch=1" target="_blank">OTRA WEB DE ENLACES ACE STREAM</a>
+    </p>
+  </div>
+
   <div class="how-to-play-container">
     <h3 class="how-to-play-header">CÓMO REPRODUCIR ENLACES ACE STREAM</h3>
     <p class="how-to-play-text">
