--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -181,10 +181,15 @@
   }
 
   <div class="otra-web">
-    <h2 style="color: white;">OTRA WEB DE ENLACES</h2>
+    <h2 style="color: white; text-align: center;">OTRA WEB DE ENLACES</h2>
     <p>
-      En el caso de que el enlace que busques no funcione, puedes probar en esta web:
-      <a href="https://www.socialcreator.com/xupimarc2/?s=289267&integ_ch=1" target="_blank">OTRA WEB DE ENLACES ACE STREAM</a>
+      En el caso de que el enlace que busques no funcione, puedes probar en esta
+      web:
+      <a
+        href="https://www.socialcreator.com/xupimarc2/?s=289267&integ_ch=1"
+        target="_blank"
+        >OTRA WEB DE ENLACES ACE STREAM</a
+      >
     </p>
   </div>
 
@@ -245,13 +250,8 @@
     <p class="footer-text">
       Todos los enlaces son obtenidos de fuentes externas.
     </p>
+    <button class="scroll-to-top" (click)="scrollToTop()">
+      Volver arriba <i class="bi bi-arrow-up arrow-top"></i>
+    </button>
   </div>
-  <button
-    matTooltip="Volver arriba"
-    matTooltipPosition="left"
-    class="scroll-to-top"
-    (click)="scrollToTop()"
-  >
-    <i class="bi bi-arrow-up arrow-top"></i>
-  </button>
 </div>
