--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,63 +1,70 @@
 .container {
-  background-color: #121212;
+  background-color: #1e1e1e;
+  color: #f5f5f5;
+  font-family: 'Roboto', sans-serif;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* SCROLL TO TOP BUTTON */
 .scroll-to-top {
-  background-color: transparent; 
+  background-color: #007bff;
   color: white;
-  border: 1px solid white;
-  padding: 10px;
-  border-radius: 20px;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 50px;
   cursor: pointer;
   font-size: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s;
 }
 
 .scroll-to-top:hover {
-  background-color: white;
-  color: black;
-  transition: all 0.3s;
+  background-color: #0056b3;
+  transform: translateY(-3px);
 }
 
 .delete-search-button {
   cursor: pointer;
-  background-color: #002fff;
+  background-color: #ff4d4d;
   color: white;
   border: none;
-  padding: 9px;
+  padding: 10px;
   border-radius: 50%;
   font-size: 16px;
   margin-left: 5px;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, transform 0.3s;
 }
 
 .delete-search-button:hover {
-  background-color: #2986f0;
+  background-color: #e60000;
+  transform: scale(1.1);
 }
 
 .links {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 5px;
+  margin-top: 10px;
 }
 
 .logo-img {
   width: auto;
-  height: 22px;
+  height: 30px;
   vertical-align: middle;
 }
 
 .navbar {
   background-color: #333;
   color: white;
-  padding: 10px 20px;
+  padding: 15px 30px;
   margin-bottom: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-bottom: 2px solid #444;
+  border-radius: 8px;
 }
 
 .navbar-container {
@@ -73,7 +80,8 @@
 
 .navbar-title h1 {
   margin: 0;
-  font-size: 24px;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .custom-message {
@@ -90,8 +98,8 @@
   position: relative;
   justify-content: center;
   align-items: center;
-  margin: 5px 0;
-  width: 100%; 
+  margin: 10px 0;
+  width: 100%;
 }
 
 .search-field {
@@ -104,12 +112,12 @@
   border-radius: 25px;
   transition: all 0.3s ease;
   outline: none;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .search-field:focus {
-  border-color: #be3a80;
-  box-shadow: 0 3px 8px rgba(0,0,0,0.15);
+  border-color: #007bff;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
 }
 
 .no-encontrado-text {
@@ -118,21 +126,27 @@
   font-size: 18px;
   margin-top: 5px;
   margin-bottom: 30px;
-  color: white;
+  color: #ff4d4d;
 }
 
 .copy-button {
   margin-left: 7px;
   cursor: pointer;
-  padding: 0px 2px;
-  font-size: 12px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
+  padding: 9px;
+  border: none;
+  border-radius: 8px;
+  background-color: #007bff;
+  color: white;
+  transition: all 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .copy-button:hover {
-  background-color: rgba(212, 208, 208, 0.9);
-  transition: all 0.3s;
+  background-color: #0056b3;
+  transform: translateY(-3px);
 }
 
 .link-futboltv:hover {
@@ -174,15 +188,16 @@
   background-color: #004d40;
   display: flex;
   flex-direction: column;
-  align-items: center; 
+  align-items: center;
   margin-top: 5px;
   margin-bottom: 5px;
   padding: 12px;
+  border-radius: 8px;
 }
 
 .footer-text {
   color: white;
-  font-size: 13px;
+  font-size: 14px;
   margin-top: 8px;
 }
 
@@ -194,11 +209,11 @@
   border-radius: 10px;
   padding: 15px;
   font-family: Arial, sans-serif;
-  font-size: 17px; 
+  font-size: 17px;
   line-height: 1.6;
   color: #333;
   background: linear-gradient(to top, #000000, #222020);
-  margin: 0 30px 30px 35px; 
+  margin: 0 30px 30px 35px;
   margin-top: 3rem;
 }
 
@@ -233,14 +248,14 @@
   justify-content: center;
   flex-direction: column;
   border: 1px solid #ddd;
-  border-radius: 10px; 
+  border-radius: 10px;
   padding: 15px;
   font-family: Arial, sans-serif;
-  font-size: 17px; 
+  font-size: 17px;
   line-height: 1.6;
   color: #333;
   background: linear-gradient(to top, #000000, #222020);
-  margin: 0 30px 30px 35px; 
+  margin: 0 30px 30px 35px;
   margin-top: 3rem;
 }
 
@@ -265,19 +280,20 @@
 .acestream-link {
   text-align: center;
   margin: 5px;
-  padding: 6px;
+  padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 8px;
   background-color: #353333;
   font-size: 19px;
   cursor: pointer;
   text-decoration: none;
   color: rgb(255, 255, 255);
+  transition: all 0.3s;
 }
 
 .acestream-link:hover {
-  transform: scale(1.03);
-  transition: transform 0.2s;
+  transform: scale(1.05);
+  background-color: #444444;
 }
 
 .futbol-tv-agendas {
@@ -325,6 +341,9 @@
   width: 400px;
   height: 401px;
   margin-bottom: 10px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(61, 58, 58, 0.2);
 }
 
 .spinner-container {
